Fixed homepage news item listing breaking on uneven line lengths

--- a/public/static/scss/molecules/_wrappers.scss
+++ b/public/static/scss/molecules/_wrappers.scss
@@ -336,6 +336,11 @@
                 &:nth-child(2n) {
                     margin-right: 0;
                 }
+                &:nth-child(2n+1) {
+                    content: "";
+                    display: table;
+                    clear: both;
+                }
             }
         }
     }
